results/scraper/box64/2312
When building Box 64  with the -D ANDROID=1 flag, the make command fails with an error related to shm_open and shm_unlink.
/home/user/box64/src/tools/env.c:219:12: error: static declaration of ‘shm_open’ follows non-static declaration
  219 | static int shm_open(const char *name, int oflag, mode_t mode) {
      |            ^~~~~~~~
In file included from /home/user/box64/src/tools/env.c:5:
/usr/include/x86_64-linux-gnu/sys/mman.h:144:12: note: previous declaration of ‘shm_open’ with type ‘int(const char *, int,  mode_t)’ {aka ‘int(const char *, int,  unsigned int)’}
  144 | extern int shm_open (const char *__name, int __oflag, mode_t __mode);
      |            ^~~~~~~~
/home/user/box64/src/tools/env.c:222:12: error: static declaration of ‘shm_unlink’ follows non-static declaration
  222 | static int shm_unlink(const char *name) {
      |            ^~~~~~~~~~
/usr/include/x86_64-linux-gnu/sys/mman.h:147:12: note: previous declaration of ‘shm_unlink’ with type ‘int(const char *
’
  147 | extern int shm_unlink (const char *__name);
      |            ^~~~~~~~~~